# iris

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
core/: alerts.py  config.py  llm.py  main.py  mcp_filter.py  state.py
core/agents/: alert_dispatcher.py  mcp_probe.py  orchestrator.py  pattern_detector.py  safety_evaluator.py  self_healer.py
core/evaluators/: allergy_contraindication.py  attribution.py  base.py  context_gap.py  dosage_boundary.py  drug_interaction.py  factual_hallucination.py  service.py  surgical_phase.py
core/healing/: dataset.py  diagnose.py  experiment.py  models.py  mutation_engine.py  pipeline.py  prompt_identity.py  prompt_manager.py  scan.py  validator.py
core/knowledge/: fda_labels.py  rxnorm.py
core/phoenix/: client.py  tracing.py
dashboard/templates/: dashboard.html  index.html
demo/mock_agents/: bad_orion.py  live_agent.py  simulator.py
demo/patients/: pt_001_cholecystectomy.json  pt_002_knee_replacement.json  pt_003_cardiac_cath.json
design-system/: README.md  SKILL.md  colors_and_type.css
design-system/fonts/: README.md
design-system/preview/: _base.css  alert-item.html  badge-severity.html  badge-status.html  border-radius.html  btn-danger.html  btn-ghost.html  btn-icon.html  btn-primary.html  chip-tag.html  color-palette.html  diff-viewer.html  elevation-shadows.html  eval-card-fail.html  eval-card-pass.html  healing-candidate.html  heatmap-table.html  icon-grid.html  icon-usage.html  logo-mark.html  (+15 more)
sdk/: client.py  models.py
tests/: test_evaluators.py  test_pipeline.py
(+17 files in other folders)
