[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iris-clinical"
version = "0.1.0"
description = "IRIS — Inference Risk and Integrity Supervisor for clinical AI systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.1.0",
    "google-genai",
    "arize-phoenix-otel",
    "openinference-instrumentation-google-adk>=0.1.0",
    "openinference-instrumentation-google-genai>=1.0.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-multipart",
    "reportlab>=4.2.0",
    "sse-starlette>=2.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "anyio[trio]",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*", "core*", "dashboard*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
